# phoenixfn-svn

./: TEST
ircd/hyperion/tags/import-hyperion-r363-20060923/: Makefile.in  aclocal.m4  configure  configure.ac
ircd/hyperion/tags/import-hyperion-r363-20060923/autoconf/: Makefile.am  Makefile.in  hyperion-arch.m4  hyperion-libc.m4
ircd/hyperion/tags/import-hyperion-r363-20060923/build-misc/: Makefile.am  Makefile.in
ircd/hyperion/tags/import-hyperion-r363-20060923/doc/: Makefile.am  blalloc.txt
ircd/hyperion/tags/import-hyperion-r363-20060923/doc/sgml/: Makefile.in  docbook.mk
ircd/hyperion/tags/import-hyperion-r363-20060923/doc/sgml/dancer-oper-guide/: dancer-oper-guide.sgml
ircd/hyperion/tags/import-hyperion-r363-20060923/doc/sgml/dancer-user-guide/: Makefile.am  Makefile.in  dancer-user-guide.sgml
ircd/hyperion/tags/import-hyperion-r363-20060923/include/: Makefile.in  class.h  config.h.fn  config.h.fn-large  config.h.tn-ipv6  config.h.tn-large-ipv6  dump.h  fdlist.h  ircd_signal.h  m_commands.h  m_info.h  m_kline.h  numeric.h  s_auth.h  s_conf.h  s_cr.h  s_debug.h  s_misc.h  send.h  varparse.h  whowas.h
ircd/hyperion/tags/import-hyperion-r363-20060923/lib/Dancer/: Makefile.in
ircd/hyperion/tags/import-hyperion-r363-20060923/lib/Dancer/Proxy/: Connection.pm  Makefile.am
ircd/hyperion/tags/import-hyperion-r363-20060923/patches/: hyperion-newparse.patch  hyperion-proper-netsplit-quits.patch  hyperion-svsnick.patch  hyperion-umodeban.patch
ircd/hyperion/tags/import-hyperion-r363-20060923/src/: class.c  fileio.c  hash.c  irc_string.c  list.c  m_chall.c  m_help.c  m_info.c  m_ison.c  m_kline.c  m_links.c  m_list.c  m_makepass.c  m_map.c  m_message.c  m_quit.c  m_rehash.c  m_set.c  m_spingtime.c  m_squit.c  m_svinfo.c  m_trace.c  m_unkline.c  m_wallops.c  m_whois.c  match.c  numeric.c  parse.c  s_auth.c  s_bsd.c  s_cr.c  s_debug.c  s_serv.c  s_stats.c  s_zip.c  send.c  umodes.c  varparse.c
ircd/hyperion/tags/import-hyperion-r363-20060923/tools/: Makefile.am  start_debugnet.pl
ircd/hyperion/trunk/: IDEAS  Makefile.am  NEWS  README  autogen.sh
ircd/hyperion/trunk/autoconf/: hyperion-socket.m4
ircd/hyperion/trunk/doc/: Makefile.in  example.conf
ircd/hyperion/trunk/doc/sgml/dancer-oper-guide/: cmodes.sgml  commands.sgml  config.sgml  umodes.sgml
ircd/hyperion/trunk/doc/sgml/dancer-user-guide/: changes.sgml  intro.sgml  umodes.sgml
ircd/hyperion/trunk/include/: Makefile.am  channel.h  client.h  common.h  config.h.debian  config.h.dist  config.h.fn-include  config.h.fn-large-ipv6  config.h.fn-small-ipv6  dline_conf.h  hash.h  irc_string.h  ircd.h  ircd_defs.h  list.h  msg.h  mtrie_conf.h  packet.h  patchlevel.h  res.h  s_bsd.h  s_serv.h  s_user.h  s_zip.h  umodes.h
ircd/hyperion/trunk/lib/: Makefile.am
ircd/hyperion/trunk/lib/Dancer/: Proxy.pm
ircd/hyperion/trunk/patches/: Makefile.am  Makefile.in  README  hyperion-encap.patch  hyperion-use-adns.patch
ircd/hyperion/trunk/src/: Makefile.am  Makefile.in  channel.c  client.c  dline_conf.c  feature.c  ircd.c  ircd_signal.c  listener.c  m_admin.c  m_away.c  m_burst.c  m_collide.c  m_connect.c  m_htm.c  m_ltrace.c  m_lusers.c  m_mode.c  m_pass.c  m_ping.c  m_pong.c  m_scan.c  m_setname.c  m_snick.c  m_time.c  m_userhost.c  m_users.c  m_version.c  m_who.c  md5crypt.c  motd.c  mtrie_conf.c  packet.c  paths.c  res.c  s_conf.c  s_misc.c  s_user.c  tsdelta.c  version.c  (+1 more)
ircd/hyperion/trunk/tools/: Makefile.in  README
ircd/ircd-seven/branches/old-ratbox/: README  configure
ircd/ircd-seven/branches/spb-charybdis/: BUGS  ChangeLog  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
ircd/ircd-seven/branches/umode-modules/: CREDITS  ChangeLog  INSTALL  README.FIRST
ircd/ircd-seven/tags/hyperion-trunk-r361/: AUTHORS  IDEAS  NEWS  README  configure  configure.ac
ircd/ircd-seven/tags/ircd-ratbox-2.2.3/: INSTALL
ircd/ircd-seven/trunk/: .svnignore  ChangeLog  Makefile.in  autogen.sh  bootstrap  configure  configure.ac
ircd/ircd-seven/trunk/contrib/: m_mkpasswd.c
ircd/ircd-seven/trunk/doc/: Hybrid-team  Makefile.in  example.conf  extban.txt  hooks.txt  ircd-seven-priv-groups  monitor.txt  reference.conf  server-version-info
ircd/ircd-seven/trunk/extensions/: Makefile.in  extb_channel.c  ip_cloaking.c  m_findforwards.c  m_identify.c  m_webirc.c  spy_admin_notice.c  spy_links_notice.c  spy_motd_notice.c  spy_stats_notice.c
ircd/ircd-seven/trunk/include/: .svnignore  channel.h  client.h  config.h  hostmask.h  irc_string.h  ircd.h  numeric.h  packet.h  res.h  s_conf.h  s_log.h  s_newconf.h  s_serv.h  s_user.h  send.h  snomask.h  whowas.h
ircd/ircd-seven/trunk/libcharybdis/: devpoll.c  kqueue.c  memory.c  poll.c  tools.h
ircd/ircd-seven/trunk/modules/: .depend  .indent.pro  Makefile.in  m_connect.c  m_dline.c  m_etrace.c  m_grant.c  m_info.c  m_invite.c  m_kline.c  m_links.c  m_map.c  m_oper.c  m_pass.c  m_pong.c  m_post.c  m_rehash.c  m_restart.c  m_resv.c  m_scan.c  m_services.c  m_set.c  m_signon.c  m_snote.c  m_stats.c  m_svinfo.c  m_tb.c  m_testline.c  m_testmask.c  m_topic.c  m_trace.c  m_user.c  m_version.c  m_wallops.c  m_who.c  m_whois.c  m_whowas.c  m_xline.c  sno_routing.c
ircd/ircd-seven/trunk/old/: RELNOTES
ircd/ircd-seven/trunk/src/: .depend  Makefile.in  channel.c  chmode.c  client.c  extban.c  hash.c  ircd.c  ircd_lexer.l  ircd_state.c  lex.yy.c  linebuf.c  listener.c  match.c  messages.tab  modules.c  newconf.c  parse.c  reject.c  s_conf.c  s_log.c  s_newconf.c  s_serv.c  s_stats.c  s_user.c  send.c  sigio.c  snomask.c  version.c.SH  y.tab.h
ircd/ircd-seven/trunk/tools/: Makefile.in
ircd/ircd-seven/trunk/unsupported/: Makefile.in
services/theia/tags/import-theia-r107-20060923/: Makefile.in  README  autogen.sh  configure
services/theia/trunk/: IDEAS  INSTALL  README.hybserv  configure.ac
services/theia/trunk/doc/: README-FLAGS  README-PTHREADS
services/theia/trunk/include/: alloc.h  channel.h  chanserv.h  common.h  conf.h  config.h.in  data.h  dcc.h  debug.h  flood.h  gline.h  global.h  hybdefs.h  init.h  log.h  match.h  memoserv.h  misc.h  nickserv.h  operserv.h  (+2 more)
(+475 files in other folders)
