## Process this file with automake to produce Makefile.in

include $(top_srcdir)/build-misc/common.mk

noinst_HEADERS = ircd.h \
	blalloc.h \
	caps.h \
	channel.h \
	class.h \
	client.h \
	common.h \
	config.h \
	config.h.debian \
	config.h.dist \
	config.h.dist-ipv6 \
	config.h.fn \
	config.h.fn-ipv6 \
	config.h.fn-small \
	config.h.fn-small-ipv6 \
	config.h.fn-large \
	config.h.fn-large-ipv6 \
	config.h.fn-include \
	config.h.tn-small \
	config.h.tn-small-ipv6 \
	config.h.tn \
	config.h.tn-ipv6 \
	config.h.tn-large \
	config.h.tn-large-ipv6 \
	dbuf.h \
	dline_conf.h \
	dump.h \
	fdlist.h \
	feature.h \
	fileio.h \
	flud.h \
	hash.h \
	irc_string.h \
	ircd_defs.h \
	ircd_signal.h \
	list.h \
	listener.h \
	m_commands.h \
	m_info.h \
	m_kline.h \
	md5.h \
	md5crypt.h \
	motd.h \
	msg.h \
	mtrie_conf.h \
	numeric.h \
	packet.h \
	parse.h \
	patchlevel.h \
	paths.h \
	res.h \
	restart.h \
	s_auth.h \
	s_bsd.h \
	s_conf.h \
	s_cr.h \
	s_debug.h \
	s_log.h \
	s_misc.h \
	s_serv.h \
	s_stats.h \
	s_user.h \
	s_zip.h \
	scache.h \
	send.h \
	sprintf_irc.h \
	struct.h \
	supported.h \
	umodes.h \
	whowas.h \
	varparse.h
